--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Jeu de combat Pokémon avec système de boutique et decks",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
+    "server": "node server.js",
     "dev": "nodemon server.js",
     "setup-db": "node setup-database.js"
   },
